--- a/app/src/main/res/layout/add_edit_fragment.xml
+++ b/app/src/main/res/layout/add_edit_fragment.xml
@@ -7,6 +7,7 @@
     android:background="#1C1C1E"
     tools:context=".AddEditFragment">
 
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
@@ -14,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:text="MINUTES"
+        android:text="@string/minutes"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +31,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Add"
+        android:text="@string/add"
         android:textColor="@color/white"
         android:textSize="48sp"
         android:textStyle="bold"
@@ -46,7 +47,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="#1C1C1E"
-        android:text="Cancel"
+        android:text="@string/cancel"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -58,28 +59,32 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#1C1C1E"
-        android:text="Savel"
+        android:text="@string/save"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/nameTextView"
+        style="@style/Widget.AppCompat.EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:ems="10"
 
-        android:hint="My new habbit"
+        android:backgroundTint="@color/white"
+        android:ems="10"
+        android:hint="@string/name"
         android:inputType="textPersonName|textCapSentences"
         android:textColor="@color/white"
+        android:textColorHint="#585858"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:ignore="DuplicateSpeakableTextCheck" />
 
     <TextView
         android:id="@+id/textView2"
@@ -88,7 +93,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:text="NAME"
+        android:text="@string/name"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,12 +107,14 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/white"
         android:ems="10"
-        android:hint="0"
+        android:hint="@string/zero"
         android:inputType="number"
-        android:text="0"
-        android:textSize="20sp"
         android:maxLength="4"
+        android:textColor="@color/white"
+        android:textColorHint="#585858"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,6 +133,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/minutesTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/minutesTextView"
+        app:tickMarkTint="#585858" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
